# gitglasses

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/gitglasses/: __init__.py  cli.py  gitglasses.py
tests/: conftest.py  test_cli.py  test_gitglasses.py
