[project]
name = "gitglasses"
version = "0.1.0"
description = "Visualize git branch relationships in a commit range"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Sander Teunissen"}
]
dependencies = [
    "pygit2>=1.13.0",
]

[project.scripts]
gitglasses = "gitglasses.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.hatch.build.targets.wheel]
packages = ["src/gitglasses"]

[dependency-groups]
dev = [
    "dirty-equals",
    "pytest",
    "pytest-cov",
]
